--- a/WebContent/WEB-INF/bundles/bb-manifest-en_US.properties
+++ b/WebContent/WEB-INF/bundles/bb-manifest-en_US.properties
@@ -4,11 +4,11 @@
 # manifest properties
 #
 plugin.name=Ensemble Building Block
-plugin.description=Ensemble Blackboard Building Block
+plugin.description=Ensemble Building Block for Blackboard Learn 
 plugin.vendor.description=Syracuse University School of Information Studies
 
 # Tools defined by this extension
-plugin.application.name=B2Context demonstration
+plugin.application.name=Ensemble Building Block Application
 plugin.application.description=A Building Block which integrates with the Ensemble Video Platform
 
 plugin.application.course_tool.name=Ensemble Course Tool
@@ -36,15 +36,17 @@ page.system.index.button.shared=Configure Institutional Content
 page.system.admin.title=Configure Ensemble Building Block
 page.system.admin.instructions=These settings are required to configured the Ensemble building block.
 page.system.admin.step1.title=Ensemble Settings
-page.system.admin.step1.instructions=Enter the name of your Ensemble Server and the application API key as provided by your Ensemble server.
+page.system.admin.step1.instructions=Enter the name of your Ensemble Server and the LTI configuration on your Ensemble server.
 page.system.admin.step1.servername.label=Server Url:
-page.system.admin.step1.servername.instructions=Enter the Url to your Ensemble server home.
-page.system.admin.step1.apikey.label=API Key:
-page.system.admin.step1.apikey.instructions=Enter the API key as generated on your Ensemble Server.
-page.system.admin.step1.secretkey.label=Secret Key:
-page.system.admin.step1.secretkey.instructions=Enter the Secret key as generated on your Ensemble Server.
-page.system.admin.step1.domain.label=Domain:
-page.system.admin.step1.domain.instructions=Represents the authenticating domain for Ensemble users. Optional.
+page.system.admin.step1.servername.instructions=Enter the Url to your Ensemble server home. (eg. https://ensemble.mycompany.com) 
+page.system.admin.step1.apikey.label=LTI Consumer Key:
+page.system.admin.step1.apikey.instructions=Enter the consumer key for your Ensemble institutional LTI configuration.
+page.system.admin.step1.secretkey.label=LTI Shared Secret:
+page.system.admin.step1.secretkey.instructions=Enter the shared secret for your Ensemble institutional LTI configuration.
+page.system.admin.step1.userkey.label=Key Ensemble Users By:
+page.system.admin.step1.userkey.instructions=You can select either Blackboard Usernames + optional domain, or Blackboard Email Addresses. Choose whatever matches the username of your Ensemble users.
+page.system.admin.step1.domain.label=Optional Domain:
+page.system.admin.step1.domain.instructions=When using keying users by Blackboard usernames. Optional.
 page.system.admin.success=Your%20Settings%20have%20been%20saved.
 
 #
